@@ -20,8 +20,8 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
 IUSE="+alsa aqua bluray bs2b +cdio dvb +dvd +enca encode +iconv jack joystick
 jpeg ladspa lcms +libass libcaca libguess lirc mng +mp3 -openal +opengl oss
-portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vcd vdpau
-vf-dlopen wayland +X xinerama +xscreensaver +xv"
+portaudio +postproc pulseaudio pvr +quvi radio samba +shm +threads v4l vcd
+vdpau vf-dlopen wayland +X xinerama +xscreensaver +xv"
 
 REQUIRED_USE="
 	enca? ( iconv )
@@ -40,6 +40,10 @@ REQUIRED_USE="
 "
 
 RDEPEND+="
+	|| (
+		>=media-video/libav-9:=[encode?,threads?,vdpau?]
+		>=media-video/ffmpeg-1.2[encode?,threads?,vdpau?]
+	)
 	sys-libs/ncurses
 	sys-libs/zlib
 	X? (
@@ -92,10 +96,6 @@ RDEPEND+="
 		>=dev-libs/wayland-1.0.0
 		media-libs/mesa[egl,wayland]
 		>=x11-libs/libxkbcommon-0.3.0
-	)
-	|| (
-		>=media-video/libav-9[encode?,threads?,vdpau?]
-		>=media-video/ffmpeg-1.2[encode?,threads?,vdpau?]
 	)
 "
 ASM_DEP="dev-lang/yasm"
@@ -233,6 +233,8 @@ src_configure() {
 	####################
 	# Advanced Options #
 	####################
+	# keep build reproducible
+	myconf+=" --disable-build-date"
 	# do not add -g to CFLAGS
 	myconf+=" --disable-debug"
 	use threads || myconf+=" --disable-pthreads"
