@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
+  keep build reproducible
+
   09 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
   do not add -g to CFLAGS
 
